# cmaketest

./: .gitignore  CMakeLists.txt  build_unix.sh  build_unix_lib.sh  build_win.sh  gitconfig.txt  main.cpp
math/: CMakeLists.txt
render/: CMakeLists.txt
render/core/: core.cpp  core.h
